Finished infections and added a printInfo method for pets.